Added Json web token, authorization and middleware

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
-  }
+  },
+  "TokenKey": "Super secret production key super secret production key super secret production key super secret production key that I need to repeat to have 56 chars"
 }
